--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,3 +11,42 @@ preconf:
     # 1. In file "/etc/sysctl.conf" change/add row: "fs.inotify.max_user_watches = 524288"
     # 2. Then "sudo sysctl -p" to apply changes immediately
     fs.inotify.max_user_watches: 524288
+  utilities:
+    - aptitude
+    - python-software-properties
+    - bc
+    - sudo
+    - htop
+    - iotop
+    - itop
+    - iftop
+    - mytop
+    - atop
+    - powertop
+    - apachetop
+    - visitors
+    - fortunes-ubuntu-server
+    - nmap
+    - grc
+    - tree
+    - traceroute
+    - acl
+    - nethogs
+    - dar
+    - rar
+    - p7zip
+    - subversion
+    - git-svn
+    - lynx
+    - ccze
+    - curl
+    - dstat
+    - sysstat
+    - smartmontools
+    - tcpdump
+    - wget
+    - vim
+    - tmux
+    - facter
+    - ncurses-term
+    - sysv-rc-conf
