--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,11 @@
     upgrade=yes
   sudo: yes
 
+- name: Installing useful utilities
+  apt: pkg={{ item }}
+  with_items: preconf.utilities
+  sudo: yes
+
 - name: Apply sysctl settings
   sysctl:
     name={{ item.key }}
