Remove visitors utiliy from list - it is not available in Ubuntu 16.04 Xenial

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -57,5 +57,6 @@ preconf:
     - traceroute
     - tree
     - vim
-    - visitors
+# visitors is not available in Ubuntu 16.04 Xenial
+#    - visitors
     - wget
