--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,10 @@
+---
+
+- name: Install dependencies for Ansible apt module
+  command: apt-get install python-apt aptitude
+  register: preconf_apt_dependencies_installed
+  changed_when: "'is already the newest version' not in preconf_apt_dependencies_installed.stdout"
+
 - name: Update and then safe upgrade installed packages
   apt:
     update_cache=yes
