--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Install dependencies for Ansible apt module
-  command: apt-get install python-apt aptitude
+  command: apt-get install -y python-apt aptitude
   register: preconf_apt_dependencies_installed
   changed_when: "'is already the newest version' not in preconf_apt_dependencies_installed.stdout"
 
