--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,6 +8,7 @@
 - name: Update and then safe upgrade installed packages
   apt:
     update_cache=yes
+    cache_valid_time=3600
     upgrade=yes
 
 # This is "standard system utilities" metapackage.
