Add hddtemp and lm-sensors monitoring tools to the list of utilities

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -34,10 +34,12 @@ preconf:
     - fortunes-ubuntu-server
     - git-svn
     - grc
+    - hddtemp
     - htop
     - iftop
     - iotop
     - itop
+    - lm-sensors
     - lynx
     - mc
     - mcelog
