systemd module added in Ansible 2.2, so use pure command to systemd daemon reload

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,8 +4,7 @@
 ## systemd
 
 - name: systemd-daemon-reload
-  systemd: daemon_reload=yes
-
+  command: systemctl --system daemon-reload
 
 ## hddtemp service
 
