--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,6 +20,9 @@
     pkg=ubuntu-standard
     install_recommends=yes
 
+- name: Installing zram (formely compcache)
+  apt: pkg=zram-config
+
 - name: Installing useful utilities
   apt: pkg={{ item }}
   with_items: "{{ preconf.utilities }}"
