Install Intel processor microcode updates (AMD users, pull request please conditional behaviour

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,6 +20,9 @@
     pkg=ubuntu-standard
     install_recommends=yes
 
+- name: Installing intel-microcode package for processors microcode updates
+  apt: pkg=intel-microcode
+
 - name: Installing zram (formely compcache)
   apt: pkg=zram-config
 
