--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Install dependencies for Ansible apt* modules
-  command: apt-get -y install python-apt
+  command: apt-get -y install python3-apt
   args:
     warn: no
   register: preconf_apt_dependencies_installed
