Use systemd Ansible module instead of command module with systemctl --system daemon-reload command inside

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,7 +4,8 @@
 ## systemd
 
 - name: systemd-daemon-reload
-  command: systemctl --system daemon-reload
+  systemd: daemon_reload=yes
+
 
 ## hddtemp service
 
