--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: Install dependencies for Ansible apt* modules
+- name: Install python3-apt dependency for Ansible apt and apt_repository modules
   command: apt-get -y install python3-apt
   args:
     warn: no
