--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,7 +8,7 @@ preconf:
       state: ignored
     sbt:
       id: 2EE0EA64E40A89B84B2DF73499E82A75642AC823
-      url: hkp://keyserver.ubuntu.com:80
+      keyserver: keyserver.ubuntu.com
       state: ignored
 
   repositories:
