--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,10 @@ preconf:
       id: 2EE0EA64E40A89B84B2DF73499E82A75642AC823
       keyserver: keyserver.ubuntu.com
       state: ignored
+    tor:
+      id: A3C4F0F979CAA22CDBA8F512EE8CBC9E886DDD89
+      keyserver: keys.gnupg.net
+      state: ignored
 
   repositories:
     nodejs_10_xenial:
@@ -23,6 +27,14 @@ preconf:
     sbt:
       repository: deb https://dl.bintray.com/sbt/debian /
       filename: sbt
+      state: ignored
+    tor_stable_xenial:
+      repository: deb https://deb.torproject.org/torproject.org xenial main
+      filename: tor
+      state: ignored
+    tor_stable_xenial_src:
+      repository: deb-src https://deb.torproject.org/torproject.org xenial main
+      filename: tor
       state: ignored
 
   package_sets:
