--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,6 +18,10 @@ preconf:
       id: 2EE0EA64E40A89B84B2DF73499E82A75642AC823
       keyserver: keyserver.ubuntu.com
       state: ignored
+    influxdata:
+      id: 2582E0C5
+      url: https://repos.influxdata.com/influxdb.key
+      state: ignored
     tor:
       id: A3C4F0F979CAA22CDBA8F512EE8CBC9E886DDD89
       keyserver: keys.gnupg.net
