--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,7 +24,7 @@ preconf:
       state: ignored
     tor:
       id: A3C4F0F979CAA22CDBA8F512EE8CBC9E886DDD89
-      keyserver: keys.gnupg.net
+      url: https://deb.torproject.org/torproject.org/A3C4F0F979CAA22CDBA8F512EE8CBC9E886DDD89.asc
       state: ignored
 
   repositories:
