Add apt key for openjdk-r PPA repo

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -26,6 +26,10 @@ preconf:
       id: A3C4F0F979CAA22CDBA8F512EE8CBC9E886DDD89
       url: https://deb.torproject.org/torproject.org/A3C4F0F979CAA22CDBA8F512EE8CBC9E886DDD89.asc
       state: ignored
+    openjdk-r:
+      id: DA1A4A13543B466853BAF164EB9B1D8886F44E2A
+      keyserver: keyserver.ubuntu.com
+      state: ignored
 
   repositories:
     nodejs_10_xenial:
