Add lid switch ignoring

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -153,6 +153,9 @@ preconf:
         masked: yes
         ignored: yes
 
+  lid:
+    switchignore: no
+
   hostname:
     apply: no
     hostname: example
