--- a/defaults/main/apt_keys.yaml
+++ b/defaults/main/apt_keys.yaml
@@ -5,6 +5,10 @@ preconf:
       id: 6125E2A8C77F2818FB7BD15B93C4A3FD7BB9C367
       keyserver: keyserver.ubuntu.com
       state: ignored
+    bitcoin:
+      id: C70EF1F0305A1ADB9986DBD8D46F45428842CE5E
+      keyserver: keyserver.ubuntu.com
+      state: ignored
     nodesource:
       id: 1655A0AB68576280
       url: https://deb.nodesource.com/gpgkey/nodesource.gpg.key
