Fix error for missing apt-key dependency: gnupg. Also add gnupg to common package set

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -27,6 +27,13 @@
     update_cache: yes
     upgrade: yes
 
+- name: Install apt-key dependency (gnupg)
+  apt:
+    package: gnupg
+  tags:
+    - preconf-apt-keys
+    - preconf-apt
+
 - name: Add/remove apt keys
   apt_key:
     id: "{{ item.value.id }}"
