Add separate tag preconf-sysctl for managing sysctl only

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -121,6 +121,8 @@
     name: "{{ item.key }}"
     value: "{{ item.value }}"
   with_dict: "{{ preconf.sysctl }}"
+  tags:
+    - preconf-sysctl
 
 - name: Apply systemd services settings
   systemd:
