Remove tmux from useful utilities, add curl to it

--- a/defaults/main/main.yml
+++ b/defaults/main/main.yml
@@ -101,6 +101,7 @@ preconf:
     - apt-file
     - bc
     - ccze
+    - curl
     - facter
     - fail2ban
     - grc
@@ -118,7 +119,6 @@ preconf:
     - smartmontools
     - sysstat
     - tcpdump
-    - tmux
     - traceroute
     - tree
     - wget
