--- a/defaults/main/apt_keys.yaml
+++ b/defaults/main/apt_keys.yaml
@@ -32,9 +32,14 @@ preconf:
       keyserver: keyserver.ubuntu.com
       state: ignored
 
-    influxdata:
+    influxdataold:
       id: 2582E0C5
       url: https://repos.influxdata.com/influxdb.key
+      state: ignored
+
+    influxdata:
+      id: 9D539D90D3328DC7D6C8D3B9D8FF8E1F7DF8B07E
+      url: https://repos.influxdata.com/influxdata-archive_compat.key
       state: ignored
 
     nextcloud:
